apps/nginx-test/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-test
  labels:
    app: nginx-test
spec:
  selector:
    app: nginx-test
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
